feat: 添加完整解决方案

--- a/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Core/XiHan.BasicApp.Core.csproj
@@ -57,4 +57,48 @@
       <PackageReference Include="XiHan.Framework.VirtualFileSystem" Version="2.2.0-alpha.8" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.AI\XiHan.Framework.AI.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Application.Contracts\XiHan.Framework.Application.Contracts.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Application\XiHan.Framework.Application.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Authentication\XiHan.Framework.Authentication.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Authorization\XiHan.Framework.Authorization.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Bot\XiHan.Framework.Bot.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Caching\XiHan.Framework.Caching.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Core\XiHan.Framework.Core.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Data\XiHan.Framework.Data.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.DevTools\XiHan.Framework.DevTools.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.DistributedIds\XiHan.Framework.DistributedIds.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Domain.Shared\XiHan.Framework.Domain.Shared.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Domain\XiHan.Framework.Domain.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.EventBus.Abstractions\XiHan.Framework.EventBus.Abstractions.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.EventBus\XiHan.Framework.EventBus.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Http\XiHan.Framework.Http.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Localization.Abstractions\XiHan.Framework.Localization.Abstractions.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Localization\XiHan.Framework.Localization.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Logging\XiHan.Framework.Logging.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Messaging\XiHan.Framework.Messaging.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Metadata\XiHan.Framework.Metadata.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.MultiTenancy.Abstractions\XiHan.Framework.MultiTenancy.Abstractions.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.MultiTenancy\XiHan.Framework.MultiTenancy.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.ObjectMapping\XiHan.Framework.ObjectMapping.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.ObjectStorage\XiHan.Framework.ObjectStorage.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Observability\XiHan.Framework.Observability.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Script\XiHan.Framework.Script.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.SearchEngines\XiHan.Framework.SearchEngines.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Security\XiHan.Framework.Security.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Serialization\XiHan.Framework.Serialization.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Settings\XiHan.Framework.Settings.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Tasks\XiHan.Framework.Tasks.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Templating\XiHan.Framework.Templating.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Threading\XiHan.Framework.Threading.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Timing\XiHan.Framework.Timing.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Traffic\XiHan.Framework.Traffic.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Uow\XiHan.Framework.Uow.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Utils\XiHan.Framework.Utils.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Validation.Abstractions\XiHan.Framework.Validation.Abstractions.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Validation\XiHan.Framework.Validation.csproj" />
+      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.VirtualFileSystem\XiHan.Framework.VirtualFileSystem.csproj" />
+    </ItemGroup>
+
 </Project>
