--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -5,16 +5,24 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build output
+dist/
+dist-ssr/
+
+# Local env files
+.env.local
+.env.*.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
 .DS_Store
 *.suo
@@ -22,6 +30,12 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+Thumbs.db
 
-package-lock.json
-pnpm-lock.yaml
+# TypeScript generated
+src/types/auto-imports.d.ts
+src/types/components.d.ts
+
+# Cache
+.eslintcache
+*.tsbuildinfo
