--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,4 +1,5 @@
 VITE_APP_TITLE=XiHan BasicApp (Dev)
+VITE_APP_LOGO=/favicon.png
 VITE_PORT=9000
 VITE_API_BASE_URL=http://localhost:9708
 VITE_API_PREFIX=/api
