--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,5 @@
 VITE_APP_TITLE=XiHan BasicApp
+VITE_APP_LOGO=/favicon.png
 VITE_PORT=80
 VITE_API_BASE_URL=https://api.basicapp.xihanfun.com
 VITE_API_PREFIX=/api
