--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "xihan-basic-app",
+  "type": "module",
   "version": "1.0.0",
+  "packageManager": "pnpm@10.4.0",
   "description": "XiHan BasicApp - A modern Vue3 admin management system built on Naive UI",
   "author": "zhaifanhua",
   "license": "MIT",
@@ -9,7 +11,10 @@
     "type": "git",
     "url": "https://github.com/XiHanFun/XiHan.BasicApp"
   },
-  "type": "module",
+  "engines": {
+    "node": ">=20.0.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {
     "reinstall": "pnpm run clean:modules && pnpm install",
     "clean": "rimraf dist",
@@ -33,6 +38,7 @@
     "naive-ui": "^2.41.0",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^3.2.3",
+    "sortablejs": "^1.15.7",
     "vue": "^3.5.13",
     "vue-i18n": "^11.0.0",
     "vue-router": "^4.5.0"
@@ -40,6 +46,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.0.0",
     "@types/node": "^25.3.0",
+    "@types/sortablejs": "^1.15.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "autoprefixer": "^10.4.20",
@@ -53,10 +60,5 @@
     "unplugin-vue-components": "^0.28.0",
     "vite": "^6.0.0",
     "vue-tsc": "^2.2.0"
-  },
-  "packageManager": "pnpm@10.4.0",
-  "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
   }
 }
