--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,7 +1,8 @@
 VITE_APP_TITLE=XiHan BasicApp
 VITE_APP_LOGO=/favicon.png
 VITE_PORT=9000
-VITE_API_BASE_URL=http://localhost:9708
+# 开发环境留空，让请求走 Vite proxy（同源转发，避免 CORS）
+VITE_API_BASE_URL=
 VITE_API_PREFIX=/api
 VITE_ROUTER_HISTORY=hash
 VITE_BASE=/
