--- a/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
+++ b/backend/src/modules/XiHan.BasicApp.Rbac/XiHan.BasicApp.Rbac.csproj
@@ -19,6 +19,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="ValueObject\" />
       <Folder Include="Options\" />
       <Folder Include="OpenApi\" />
     </ItemGroup>
