--- a/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
+++ b/backend/src/framework/XiHan.BasicApp.Web.Core/XiHan.BasicApp.Web.Core.csproj
@@ -15,20 +15,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="XiHan.Framework.Web.Api" Version="2.2.0-alpha.8" />
-      <PackageReference Include="XiHan.Framework.Web.Core" Version="2.2.0-alpha.8" />
-      <PackageReference Include="XiHan.Framework.Web.Docs" Version="2.2.0-alpha.8" />
-      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="2.2.0-alpha.8" />
-      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="2.2.0-alpha.8" />
+      <PackageReference Include="XiHan.Framework.Web.Api" Version="2.3.0-preview" />
+      <PackageReference Include="XiHan.Framework.Web.Core" Version="2.3.0-preview" />
+      <PackageReference Include="XiHan.Framework.Web.Docs" Version="2.3.0-preview" />
+      <PackageReference Include="XiHan.Framework.Web.Gateway" Version="2.3.0-preview" />
+      <PackageReference Include="XiHan.Framework.Web.RealTime" Version="2.3.0-preview" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.Api\XiHan.Framework.Web.Api.csproj" />
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.Core\XiHan.Framework.Web.Core.csproj" />
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.Docs\XiHan.Framework.Web.Docs.csproj" />
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.Gateway\XiHan.Framework.Web.Gateway.csproj" />
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.Grpc\XiHan.Framework.Web.Grpc.csproj" />
-      <ProjectReference Include="..\..\..\..\..\XiHan.Framework\framework\src\XiHan.Framework.Web.RealTime\XiHan.Framework.Web.RealTime.csproj" />
       <ProjectReference Include="..\XiHan.BasicApp.Core\XiHan.BasicApp.Core.csproj" />
     </ItemGroup>
 
