--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -28,10 +28,22 @@
     "Data": {
       "SqlSugarCore": {
         "ConnectionConfigs": [
+          //{
+          //  "ConfigId": "Default",
+          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
+          //  "DbType": "PostgreSQL",
+          //  "IsAutoCloseConnection": true,
+          //  "InitKeyType": "Attribute",
+          //  "MoreSettings": {
+          //    "IsAutoRemoveDataCache": true,
+          //    "IsAutoSyncStructure": false
+          //  },
+          //  "SlaveConnectionConfigs": []
+          //},
           {
             "ConfigId": "Default",
-            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
-            "DbType": "PostgreSQL",
+            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=mysql;",
+            "DbType": "MySQL",
             "IsAutoCloseConnection": true,
             "InitKeyType": "Attribute",
             "MoreSettings": {
