feat: 添加数据库链接示例

--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "XiHan": {
     "DistributedIds": {
       "SnowflakeId": {
@@ -30,26 +30,23 @@
         "ConnectionConfigs": [
           //{
           //  "ConfigId": "Default",
-          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User Id=postgres;Password=postgres;TrustServerCertificate=true;",
+          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;Username=postgres;Password=postgres;TrustServerCertificate=true;",
           //  "DbType": "PostgreSQL",
           //  "IsAutoCloseConnection": true,
-          //  "InitKeyType": "Attribute",
-          //  "MoreSettings": {
-          //    "IsAutoRemoveDataCache": true,
-          //    "IsAutoSyncStructure": false
-          //  },
+          //  "SlaveConnectionConfigs": []
+          //},
+          //{
+          //  "ConfigId": "Default",
+          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=mysql;",
+          //  "DbType": "MySQL",
+          //  "IsAutoCloseConnection": true,
           //  "SlaveConnectionConfigs": []
           //},
           {
             "ConfigId": "Default",
-            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=mysql;",
+            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=maria;",
             "DbType": "MySQL",
             "IsAutoCloseConnection": true,
-            "InitKeyType": "Attribute",
-            "MoreSettings": {
-              "IsAutoRemoveDataCache": true,
-              "IsAutoSyncStructure": false
-            },
             "SlaveConnectionConfigs": []
           }
         ],
