feat: 底层框架代码同步

--- a/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
+++ b/backend/src/main/XiHan.BasicApp.WebHost/appsettings.Development.json
@@ -28,27 +28,27 @@
     "Data": {
       "SqlSugarCore": {
         "ConnectionConfigs": [
-          //{
-          //  "ConfigId": "Default",
-          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;Username=postgres;Password=postgres;TrustServerCertificate=true;",
-          //  "DbType": "PostgreSQL",
-          //  "IsAutoCloseConnection": true,
-          //  "SlaveConnectionConfigs": []
-          //},
-          //{
-          //  "ConfigId": "Default",
-          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=mysql;",
-          //  "DbType": "MySQL",
-          //  "IsAutoCloseConnection": true,
-          //  "SlaveConnectionConfigs": []
-          //},
           {
-            "ConfigId": "Default",
-            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=maria;",
+            "ConfigId": "1",
+            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;Username=postgres;Password=postgres;TrustServerCertificate=true;",
+            "DbType": "PostgreSQL",
+            "IsAutoCloseConnection": true,
+            "SlaveConnectionConfigs": []
+          },
+          {
+            "ConfigId": "2",
+            "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=mysql;",
             "DbType": "MySQL",
             "IsAutoCloseConnection": true,
             "SlaveConnectionConfigs": []
-          }
+          },
+          //{
+          //  "ConfigId": "3",
+          //  "ConnectionString": "Server=127.0.0.1;Database=XiHanBasicApp;User=root;Password=maria;",
+          //  "DbType": "MySQL",
+          //  "IsAutoCloseConnection": true,
+          //  "SlaveConnectionConfigs": []
+          //}
         ],
         "EnableSqlLog": true,
         "EnableDbInitialization": true,
